@@ -1,5 +1,12 @@
 2004-11-04  David Schleef  <ds@schleef.org>
 
+	* README: add dependency on liboil
+	* player/swf_play.c: (main), (do_help), (new_window),
+	(sound_setup), (render_idle_audio), (fd_is_ready), (packet_get):
+	Cleanup.
+
+2004-11-04  David Schleef  <ds@schleef.org>
+
 	* README: random fixes
 	* libswfdec/swf.c: (swfdec_decoder_set_image_size): change scaling
 	back to browser-friendly policy.
